wire up deletion from the single log page and for bulk delete

--- a/bhoma/apps/couchlog/templates/couchlog/dashboard.html
+++ b/bhoma/apps/couchlog/templates/couchlog/dashboard.html
@@ -237,6 +237,7 @@
 </ul>
 <div>
 <input id="archive_all" type="button" action_type="archive" value="Archive all" style="float:right;"/>
+<input id="delete_all" type="button" action_type="delete" value="Delete all" style="float:right; margin-right:5px;"/>
 </div> 
 
 {% if count %}
