a series of extremely minor changes based on validating our html

--- a/bhoma/apps/webapp/templates/footer.html
+++ b/bhoma/apps/webapp/templates/footer.html
@@ -1,7 +1,7 @@
 <div id="footer">
     <div class="container">
         <div class="span-12">
-            <br></br>
+            &nbsp;
         </div>
         <div class="span-12 last">
             <p style="text-align:right">
