--- a/bhoma/apps/webapp/templates/layout.html
+++ b/bhoma/apps/webapp/templates/layout.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 {% load i18n %}
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<html>
 <head>
     <title>{% block title %}BHOMA{% endblock %}</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 {% block stylesheets %}
     {% include "imports/blueprint.html" %}
-    <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/bhoma.css" type="text/css" >
+    <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/bhoma.css" type="text/css" />
 {% block page_stylesheets %}{% endblock %}
 {% endblock %}
 {% block javascripts %}
