--- a/bhoma/apps/reports/templates/reports/chw_summary.html
+++ b/bhoma/apps/reports/templates/reports/chw_summary.html
@@ -11,6 +11,14 @@
         $(function() {
             $("#innertabs").tabs();
         });
+    </script>
+    <script type="text/javascript">
+        // datatable configuration.
+        $(document).ready(function() {
+            $('.datatable2').dataTable({
+                "bJQueryUI": true
+            });
+        }); 
     </script> 
 {% endif %}
 {% endblock %}
@@ -18,15 +26,136 @@
 <form method="get" style="padding-bottom: 20px;">
 <label for="chw" id="chw_label">Choose CHW: </label> 
 <select name="chw" id="chw">
-        <option value="" {% if not user_id %}selected="selected"{% endif %}>All users</option>
+        <option value="" {% if not chw_id %}selected{% endif %}>All users</option>
         {% for chw in chws %}
-        <option value="{{ chw.get_id }}" {% if chw.get_id == chw_id %}selected="selected"{% endif %}>{{ chw.formatted_name }} ({{ chw.current_clinic_display}})</option>
+        <option value="{{ chw.get_id }}" {% if chw.get_id == chw_id %}selected{% endif %}>{{ chw.formatted_name }} ({{ chw.current_clinic_display}})</option>
         {% endfor %}
 </select>
 <input type="submit" value="Go!" />
 </form>
 {% if main_chw %}
-<div id="innertabs">
+<div id="chw_summary" class="span-8">
+    <table class="summary">
+        <tr><td class="prompt">Name:</td><td>{{ main_chw.formatted_name }}</td></tr>
+        <tr><td class="prompt">Households:</td><td>{{ main_chw.households|default:"???" }}</td></tr>
+        <tr><td class="prompt">Zone:</td><td>{{ main_chw.current_clinic_zone }}</td></tr>
+        <tr><td class="prompt">Clinic:</td><td>{{ main_chw.current_clinic_display}}</td></tr>
+    </table>
+</div>
+<div class="span-5 dashboard">
+	<span class="prompt">Last Submission:</span> 
+	<br>
+	<span class="value">{{ main_chw.last_submission|date:"d M Y" }}</span>
+</div>
+<div class="span-5 dashboard">
+	<span class="prompt">First Submission:</span>
+	<br>
+	<span class="value">{{ main_chw.first_submission|date:"d M Y" }}</span>
+</div>
+<div class="span-5 last dashboard">
+	<span class="prompt">Forms Submitted:</span>
+	<br>
+	<span class="value">{{ main_chw.forms_submitted }}</span>
+</div>
+<div class="span-24">
+	<div class="span-6 dashboard">
+	    <span class="prompt">HH Surveys:</span> 
+	    <br>
+	    <span class="value">{{ main_chw.hh_surveys }}</span>
+	</div>
+	<div class="span-6 dashboard">
+	    <span class="prompt">Follow Ups:</span> 
+	    <br>
+	    <span class="value">{{ main_chw.fus }}</span>
+	</div>
+	<div class="span-6 dashboard">
+	    <span class="prompt">New Referrals:</span> 
+	    <br>
+	    <span class="value">{{ main_chw.refs }}</span>
+	</div>
+	<div class="span-6 last dashboard">
+	    <span class="prompt">Monthly Surveys:</span> 
+	    <br>
+	    <span class="value">{{ main_chw.monthly_surveys }}</span>
+	</div>
+</div>
+<div class="span-24">
+<p class="warning">The information below is not real, this is just for demonstration purposes</p>
+</div>
+<div id="hh_summary" class="span-12">
+    <h3>Household Data</h3>
+    <table class="datatable">
+        <thead>
+            <tr>
+                <th>Month</th>
+                <th>HH Visits (reported)</th>
+                <th>HH Visits (logged)</th>
+                <th>% of HH visited</th>
+                <th>% of HH with problem</th>
+            </tr>
+        </thead>
+        <tbody>
+{% for row in hh_data %}
+        <tr>
+            {% for item in row %}
+            <td>{{item}}</td>
+            {% endfor %}
+        </tr>
+{% endfor %}
+        </tbody>
+    </table>
+</div>
+<div class="span-12 last">
+&nbsp;
+</div>
+<div class="span-12">
+    <h3>Follow Ups</h3>
+    <table class="datatable">
+        <thead>
+            <tr>
+                <th>Month</th>
+                <th># FU Issued</th>
+                <th># FU Performed</th>
+                <th>% FU Made</th>
+                <th>% FU LTFU</th>
+            </tr>
+        </thead>
+        <tbody>
+{% for row in fu_data %}
+        <tr>
+            {% for item in row %}
+            <td>{{item}}</td>
+            {% endfor %}
+        </tr>
+{% endfor %}
+        </tbody>
+    </table>
+</div>
+<div class="span-12 last">
+    <h3>Referrals</h3>
+    <table class="datatable2">
+        <thead>
+            <tr>
+                <th>Month</th>
+                <th># New Referrals</th>
+                <th>% Visited Clinic</th>
+            </tr>
+        </thead>
+        <tbody>
+{% for row in ref_data %}
+        <tr>
+            <td>{{ row.0 }}</td>
+            <td>{{ row.1 }}</td>
+            <td>{{ row.3 }}</td>
+        </tr>
+{% endfor %}
+        </tbody>
+    </table>
+</div>
+<div class="span-24">
+<p class="warning">The information above is not real, this is just for demonstration purposes</p>
+</div>
+<div class="span-24" id="innertabs">
     <ul>
         <li><a href="#sync-logs">Sync logs</a></li>
         <li><a href="#case-data">Cases sent to phones</a></li>
@@ -46,7 +175,7 @@
     </div>
     <div id="punchcard">
         {% if punchcard_url %}
-            <img src="{{punchcard_url}}"></img>
+            <img src="{{punchcard_url}}">   
         {% else %}
             <p>Sorry, no data found</p>
         {% endif %}
