more tweaking of the chw summary report. also add single xform data view.

--- a/bhoma/apps/webapp/static/stylesheets/touchscreen.css
+++ b/bhoma/apps/webapp/static/stylesheets/touchscreen.css
@@ -271,6 +271,10 @@ td.prompt {
     text-align: left;
 }
 
+li .value {
+    font-weight: bold;	
+}
+
 .important {
     color: #e11;
     font-weight: bold;
