--- a/bhoma/apps/reports/templates/reports/chw_summary.html
+++ b/bhoma/apps/reports/templates/reports/chw_summary.html
@@ -2,6 +2,14 @@
 {% load report_tags %}
 {% load sync_log_tags %}
 {% load plot_tags %}
+{% block page_imports %}
+    {{ block.super }}
+    {% include "imports/jqmodal.html" %}
+{% endblock %}
+{% block page_stylesheets %}
+    {{ block.super }}
+    <link rel="stylesheet" href="{{MEDIA_URL}}xforms/stylesheets/xforms.css" type="text/css">    
+{% endblock %}
 {% block page_javascripts %}
     {{ block.super }}
 {% if main_chw %}
@@ -20,7 +28,13 @@
             });
         }); 
     </script> 
-{% endif %}
+    <script type="text/javascript">
+    // this one allows the form viewer to pop up
+    $().ready(function() {
+        $('#modal-placeholder').jqm({ajax: '@href', trigger: 'a.inlineformlink', 
+                                     ajaxText: "Please wait while we load that for you..." });
+    });
+    </script>{% endif %}
 {% endblock %}
 {% block reportcontent %}
 <form method="get" style="padding-bottom: 20px;">
@@ -34,6 +48,7 @@
 <input type="submit" value="Go!" />
 </form>
 {% if main_chw %}
+<div class="span-8">&nbsp;</div>
 <div id="chw_summary" class="span-8">
     <table class="summary">
         <tr><td class="prompt">Name:</td><td>{{ main_chw.formatted_name }}</td></tr>
@@ -42,45 +57,41 @@
         <tr><td class="prompt">Clinic:</td><td>{{ main_chw.current_clinic_display}}</td></tr>
     </table>
 </div>
-<div class="span-5 dashboard">
-	<span class="prompt">Last Submission:</span> 
-	<br>
-	<span class="value">{{ main_chw.last_submission|date:"d M Y" }}</span>
+<div class="span-8 last">&nbsp;</div>
+<div class="span-24">&nbsp;</div>
+<div class="span-8 dashboard">
+    <span class="prompt">Forms Submitted:</span>
+    <br>
+    <span class="value">{{ main_chw.forms_submitted }}</span>
 </div>
-<div class="span-5 dashboard">
+<div class="span-8 dashboard">
 	<span class="prompt">First Submission:</span>
 	<br>
 	<span class="value">{{ main_chw.first_submission|date:"d M Y" }}</span>
 </div>
-<div class="span-5 last dashboard">
-	<span class="prompt">Forms Submitted:</span>
-	<br>
-	<span class="value">{{ main_chw.forms_submitted }}</span>
+<div class="span-8 last dashboard">
+    <span class="prompt">Last Submission:</span> 
+    <br>
+    <span class="value">{{ main_chw.last_submission|date:"d M Y" }}</span>
+</div>
+<div class="span-24"></div>
+<div class="span-12 dashboard">
+    <span class="prompt">{{ main_chw.first_name }}'s Form Breakdown:</span><br>
+    <span class="value">{{ main_chw.hh_surveys }} </span><span class="prompt">Household Surveys</span><br>
+    <span class="value">{{ main_chw.fus }} </span><span class="prompt">Follow Ups</span><br>
+    <span class="value">{{ main_chw.refs }} </span><span class="prompt">New Referrals</span><br> 
+    <span class="value">{{ main_chw.monthly_surveys }} </span><span class="prompt">Monthly Surveys</span> 
+</div>
+<div class="span-12 last dashboard">
+    <span class="prompt">Recent Monthly Surveys:</span>
+    <ul>
+        {% for form in main_chw.recent_surveys %} 
+        <li><a href="{% url xform_data form.get_id %}" onclick="$('#modal-placeholder').jqmShow($(this)); return false;" class="inlineformlink">{{ form.metadata.time_end|date:"d M Y" }}</a></li>        
+        {% endfor %}
+    </ul>
 </div>
 <div class="span-24">
-	<div class="span-6 dashboard">
-	    <span class="prompt">HH Surveys:</span> 
-	    <br>
-	    <span class="value">{{ main_chw.hh_surveys }}</span>
-	</div>
-	<div class="span-6 dashboard">
-	    <span class="prompt">Follow Ups:</span> 
-	    <br>
-	    <span class="value">{{ main_chw.fus }}</span>
-	</div>
-	<div class="span-6 dashboard">
-	    <span class="prompt">New Referrals:</span> 
-	    <br>
-	    <span class="value">{{ main_chw.refs }}</span>
-	</div>
-	<div class="span-6 last dashboard">
-	    <span class="prompt">Monthly Surveys:</span> 
-	    <br>
-	    <span class="value">{{ main_chw.monthly_surveys }}</span>
-	</div>
-</div>
-<div class="span-24">
-<p class="warning">The information below is not real, this is just for demonstration purposes</p>
+    <p class="warning">The information below is not real, this is just for demonstration purposes</p>
 </div>
 <div id="hh_summary" class="span-12">
     <h3>Household Data</h3>
@@ -104,9 +115,6 @@
 {% endfor %}
         </tbody>
     </table>
-</div>
-<div class="span-12 last">
-&nbsp;
 </div>
 <div class="span-12">
     <h3>Follow Ups</h3>
@@ -181,5 +189,6 @@
         {% endif %}
     </div>
 </div> 
+<div class="jqmWindow" id="modal-placeholder"></div>
 {% endif %}
 {% endblock %}
