--- a/bhoma/apps/reports/templates/reports/chw_summary.html
+++ b/bhoma/apps/reports/templates/reports/chw_summary.html
@@ -37,21 +37,7 @@
     </script>{% endif %}
 {% endblock %}
 {% block reportcontent %}
-<form method="get" style="padding-bottom: 20px;">
-<form method="get">
-<label for="chw" id="chw_label">Choose CHW: </label> 
-<select name="chw" id="chw">
-        <option value="" {% if not chw_id %}selected{% endif %}>All users</option>
-        {% for chw in chws %}
-        <option value="{{ chw.get_id }}" {% if chw.get_id == chw_id %}selected{% endif %}>{{ chw.formatted_name }} ({{ chw.current_clinic_display}})</option>
-        {% endfor %}
-</select>
-&nbsp;
-<label for="startdate">Start Month: </label><input type="text" id="startdate" name="startdate" class="date-picker" value="{{request.dates.startdate_param}}">
-&nbsp;
-<label for="enddate">End Month: </label><input type="text" id="enddate" name="enddate" class="date-picker" value="{{request.dates.enddate_param}}">
-<input type="submit" value="Go!" />
-</form>
+{% include "reports/partials/chw_and_date_selector.html" %}
 {% if main_chw %}
 <div class="span-8">&nbsp;</div>
 <div id="chw_summary" class="span-8">
