Squashed commit of the following:
commit 954bd577e73992de68cb7a983c873570a5f7f36f
Merge: adfd35c 8a9274f
Author: Cory Zue <czue@dimagi.com>
Date:   Fri Feb 4 16:12:17 2011 -0500

    Merge branch 'dev' into mortality

commit adfd35c1b8bfe1aa34cba0a5ffd04c3c1c8f0b88
Author: Cory Zue <czue@dimagi.com>
Date:   Tue Nov 16 09:41:46 2010 -0500

    only aggregate data that has a gender and age group

commit a4c1bb02d147383bca74f92d03f0675235b2b621
Merge: 43ce036 bf76d4a
Author: Cory Zue <czue@dimagi.com>
Date:   Mon Nov 15 15:58:50 2010 -0500

    Merge branch 'master' into mortality

commit 43ce036503f39bfba286784f254ba987eca75144
Author: Cory Zue <czue@dimagi.com>
Date:   Fri Nov 12 12:21:33 2010 -0500

    intermittent checkin for the mortality report

--- a/bhoma/apps/reports/templates/reports/mortality_register.html
+++ b/bhoma/apps/reports/templates/reports/mortality_register.html
@@ -2,4 +2,8 @@
 {% block reportcontent %}
 {% load report_tags %}
 {% render_report report %}
+<table>{% for key, val in data.items %}
+    <tr><td>{{key}}</td><td>{{val}}</td></tr>
+        {% endfor %}
+</table>
 {% endblock %}
