successfully moved touchforms javascript into subrepo

--- a/bhoma/apps/webapp/templates/touchscreen.html
+++ b/bhoma/apps/webapp/templates/touchscreen.html
@@ -4,15 +4,15 @@
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/touchscreen.css" type="text/css">
 
-    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}touchforms/script/layout.js?version={{app_version}}"></script>   
-    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}touchforms/script/touchscreen-ui.js?version={{app_version}}"></script>   
-    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}touchforms/script/formnav.js?version={{app_version}}"></script>
-    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}touchforms/script/dates.js?version={{app_version}}"></script>
-    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}touchforms/script/entrycontrols.js?version={{app_version}}"></script>
-    <script language="javascript" type="text/javascript;version=1.7" src="{{MEDIA_URL}}touchforms/script/workflow.js?version={{app_version}}"></script>
+    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}formplayer/script/layout.js?version={{app_version}}"></script>   
+    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}formplayer/script/touchscreen-ui.js?version={{app_version}}"></script>   
+    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}formplayer/script/formnav.js?version={{app_version}}"></script>
+    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}formplayer/script/dates.js?version={{app_version}}"></script>
+    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}formplayer/script/entrycontrols.js?version={{app_version}}"></script>
+    <script language="javascript" type="text/javascript;version=1.7" src="{{MEDIA_URL}}formplayer/script/workflow.js?version={{app_version}}"></script>
    
-    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}touchforms/script/jquery-1.4.2.min.js"></script>
-    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}touchforms/script/shortcut.js"></script>
+    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}formplayer/script/jquery-1.4.2.min.js"></script>
+    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}formplayer/script/shortcut.js"></script>
 
 {% for script in dynamic_scripts %}
     <script language="javascript" type="text/javascript;version=1.7" src="{{MEDIA_URL}}{{script}}?version={{app_version}}"></script>   
