move css to touchforms repo

--- a/bhoma/submodules/touchforms/touchforms/formplayer/templates/touchforms/touchscreen.html
+++ b/bhoma/submodules/touchforms/touchforms/formplayer/templates/touchforms/touchscreen.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-    <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/touchscreen.css" type="text/css">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+
+    <link rel="stylesheet" href="{{MEDIA_URL}}formplayer/style/touchforms.css" type="text/css">
+    <!-- warning; the formplayer is a highly-dynamic app, and doesn't get along all that well with static stylesheets -->
 
     <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}formplayer/script/layout.js?version={{app_version}}"></script>   
     <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}formplayer/script/touchscreen-ui.js?version={{app_version}}"></script>   
