--- a/bhoma/apps/reports/templates/reports/partials/mortality_cause_of_death_partial.html
+++ b/bhoma/apps/reports/templates/reports/partials/mortality_cause_of_death_partial.html
@@ -1,6 +1,6 @@
-<div class="span-8">
+<div class="span-9">
 <h3>{{ title }}</h3>
-<table id="cause_of_death">
+<table class="mortality_breakdown">
     <thead>
         <tr>
             <th>Category</th>
