--- a/bhoma/apps/webapp/static/stylesheets/bhoma.css
+++ b/bhoma/apps/webapp/static/stylesheets/bhoma.css
@@ -119,3 +119,7 @@ nav li:last-child {
     padding-bottom: 20px;
     padding-left: 10px;
 }
+
+#innertabs {
+    font-family: "Helvetica Neue",Arial,Helvetica,sans-serif;
+}
