switch mortality report plots to use %'s

--- a/bhoma/apps/reports/templates/reports/partials/mortality_flot_partial.html
+++ b/bhoma/apps/reports/templates/reports/partials/mortality_flot_partial.html
@@ -1,5 +1,5 @@
 <br><br>
-<h3>{{ data.title }}</h3>
+<h3>% of {{ data.title }}</h3>
 <div id="{{ data.uid}}" style="width:570px;height:300px"></div>
 <script id="source" language="javascript" type="text/javascript">
 $(function () {
@@ -9,6 +9,6 @@ $(function () {
     $.plot($("#{{ data.uid }}"), data, 
             {"legend": {"show": false},
              "xaxis": {"tickFormatter": "string", "ticks": labels, "tickDecimals": "null", "min": 0, "max": data.length}, 
-             "yaxis": {"tickDecimals": 0, "min": 0}});
+             "yaxis": {"tickDecimals": 0, "min": 0, "max": 100}});
 });
 </script>
