--- a/bhoma/apps/reports/templates/reports/report_list_ts.html
+++ b/bhoma/apps/reports/templates/reports/report_list_ts.html
@@ -8,12 +8,12 @@ Report List
 <div class="container" style="font-size: 40%;">
 	<div class="span-12">
 		<h2>Clinic Management</h2>
-		{% url clinic_summary_report as sum_url %}
+		{% url clinic_report "clinic_summary_report" as sum_url %}
 	    {% ts_button "Clinic Summary Report" sum_url "big-button shiny-button" "font-size:x-large"%}
-	    {% url user_summary_report as user_url %}
+	    {% url clinic_report "user_summary_report" as user_url %}
         {% ts_button "User/CHW Summary Report" user_url "big-button shiny-button" "font-size:x-large"%}
         {# {% ts_button "Appointment List (TODO)" "#" "big-button shiny-button" "font-size:x-large"%} #}
-		{% url unrecorded_referral_list  as ref_list_url %}
+		{% url clinic_report "unrecorded_referral_list" as ref_list_url %}
 		{# {% ts_button "Open Case List" ref_list_url "big-button shiny-button" "font-size:x-large"%} #}
 	    {# no more HMIS report (at least for pilot {% ts_button "HMIS Report (TODO)" "#" "big-button shiny-button" "font-size:x-large"%} #}
 	    {% url enter_mortality_register as mr_url %}
@@ -22,13 +22,13 @@ Report List
 	<div class="span-12 last">
 	    <h2>Performance Indicator Reports</h2>
 {% if perms.webapp.bhoma_view_pi_reports %}
-	    {% url adult_pi as ad_url %}
+	    {% url clinic_report "adult_pi" as ad_url %}
 	    {% ts_button "Adult PI Report" ad_url "big-button shiny-button" "font-size:x-large"%}
-	    {% url pregnancy_pi as pr_url %}
+	    {% url clinic_report "pregnancy_pi" as pr_url %}
 	    {% ts_button "Pregnancy PI Report" pr_url "big-button shiny-button" "font-size:x-large"%}
-	    {% url under_five_pi as uf_url %}
+	    {% url clinic_report "under_five_pi" as uf_url %}
 	    {% ts_button "Under-Five PI Report" uf_url "big-button shiny-button" "font-size:x-large"%}
-	    {% url chw_pi as chw_url %}
+	    {% url clinic_report "chw_pi" as chw_url %}
 	    {% ts_button "CHW PI Report" chw_url "big-button shiny-button" "font-size:x-large"%}
 {% else %}
     <h4>Sorry, you don't have permission to view these reports.  If you think this is 
