--- a/bhoma/apps/reports/templates/reports/report_base.html
+++ b/bhoma/apps/reports/templates/reports/report_base.html
@@ -37,9 +37,15 @@
     </script>
 {% block report_javascripts %}{% endblock %}
 {% endblock %}
+{% if clinic.is_clinic %}
+    {% block header %}{% endblock %}
+{% endif %}
 {% block content %}
-<p><a href="{% url report_list %}">&lt;-- back to report list</a></p>
-<h3>{{ report.name|default:"Unknown Report" }}</h3>
+{% if not clinic.is_clinic %}
+<h3 style="padding-top:10px">{{ report.name|default:"Unknown Report" }}</h3>
+{% else %}
+<br>
+{% endif %}
 {% if show_dates %}
 <form method="get">
     <label for="startdate">Start Month: </label><input type="text" id="startdate" name="startdate" class="date-picker" value="{{request.dates.startdate_param}}">
@@ -50,9 +56,6 @@
 {% endif %}
 {% block reportcontent %}Your report goes here{% endblock %} 
 {% endblock %}
-
-<body>
-    <label for="startDate">Date :</label>
-    <input name="startDate" id="startDate" class="date-picker" />
-</body>
-</html> 
+{% if clinic.is_clinic %}
+    {% block footer %}{% endblock %}
+{% endif %}
