--- a/bhoma/apps/reports/templates/reports/partials/clinic_and_date_selector.html
+++ b/bhoma/apps/reports/templates/reports/partials/clinic_and_date_selector.html
@@ -2,7 +2,7 @@
 <label for="clinic" id="clinic_label">Site: </label> 
 <select name="clinic" id="clinic">
     <option value="" {% if not main_clinic %}selected{% endif %}>Select a site</option>
-    <optgroup label="Districs">
+    <optgroup label="Districts">
         {% for district in districts %}
         <option value="{{ district.slug }}" {% if district.slug == main_clinic.slug %}selected{% endif %}>{{ district.name }} District ({{ district.slug }})</option>
         {% endfor %}
