--- a/bhoma/apps/phone/templates/phone/sync_logs.html
+++ b/bhoma/apps/phone/templates/phone/sync_logs.html
@@ -28,7 +28,7 @@
 <tbody>
 {% for row in sync_data %}
     <tr>
-        <td><a href="{% url phone_sync_logs_for_chw row.chw.get_id %}">{{ row.chw.formatted_name }}</a></td>
+        <td>{% if row.chw %}<a href="{% url phone_sync_logs_for_chw row.chw.get_id %}">{{ row.chw.formatted_name }}</a>{% else %}{{row.chw}}{% endif %}</td>
         <td>{{ row.chw.current_clinic_display }}</td>
         <td>{{ row.value }}</td>
         <td>{{ row.last_sync.date }}</td>
