override lucene docs page

--- a/bhoma/apps/bhomalog/templates/bhomalog/lucene_docs.html
+++ b/bhoma/apps/bhomalog/templates/bhomalog/lucene_docs.html
@@ -32,8 +32,13 @@ are searched by default.  Additionally the following fields can be searched:</p>
 	<td>commit</td> 
 	<td>Commit id (hash)</td> 
 </tr> 
+<tr>
 	<td>date</td> 
 	<td>date and time of error.</td> 
+</tr>
+<tr>
+    <td>level</td> 
+    <td>log level of error.</td> 
 </tr>
 </tbody>
 </table>
