--- a/bhoma/apps/webapp/templates/bhoma_touchscreen.html
+++ b/bhoma/apps/webapp/templates/bhoma_touchscreen.html
@@ -5,6 +5,7 @@
 PREFIXES._clinic = '{{ clinic.prefix }}';
 PREFIXES._chwref = '{{ clinic.ref_prefix }}';
 CLINIC_NUM_CHW_ZONES = {{ clinic.num_chw_zones|default:"8" }};
+POP_DENSITY = '{{ clinic.density }}';
 
 NUMERIC_MONTHS = true;
 DATE_DISPLAY_ORDER = 'dmy';
