save address in patient record, display on patient landing page

--- a/bhoma/apps/patient/templates/patient/partials/single_patient_summary.html
+++ b/bhoma/apps/patient/templates/patient/partials/single_patient_summary.html
@@ -10,6 +10,9 @@
                                                           ({{ patient.address.zone_empty_reason_display }})
                                                           {% endif %}
                                                 {% endif %}</strong></td></tr>
+{% ifnotequal clinic.density 'rural' %}
+    <tr><td class="prompt">Address:&nbsp;&nbsp;</td><td><strong>{{ patient.address.address|default:"&#x2014;" }}</strong></td></tr>
+{% endifnotequal %}
     <tr><td class="prompt">Contact:&nbsp;&nbsp;</td><td><strong>{{ patient.default_phone|default:"&#x2014;" }}</strong></td></tr>
   </table>
   {% if not read_only %}
