--- a/bhoma/apps/reports/templates/reports/report_list.html
+++ b/bhoma/apps/reports/templates/reports/report_list.html
@@ -4,11 +4,10 @@
 	<h2>Clinic Management</h2>
 	<ul>
 	    <li><a href="{% url clinic_summary_report %}">Clinic Summary Report</a></li>
-        {# <li><a href="#">Appointment List (TODO)</a></li> #}
-	    {# <li><a href="{% url unrecorded_referral_list %}">Open Case List</a></li> #}
-	    <li><a href="{% url mortality_register %}">Mortality Register</a></li>
-        {# <li><a href="#">HMIS Report (TODO)</a></li> #}
-	    {% if debug %}<li><a href="{% url enter_mortality_register %}">Enter NHC Community Register</a></li>{% endif %}
+        {% if debug and user.is_superuser %}
+        <li><a href="{% url enter_mortality_register %}">Enter NHC Community Register</a></li>
+        <li><a href="{% url mortality_register %}">Mortality Register</a></li>
+        {% endif %}
 	</ul>
 </div>
 <div class="span-12 last">
