add dashboard report to view health of clinic connectivity

--- a/bhoma/apps/reports/templates/reports/report_list.html
+++ b/bhoma/apps/reports/templates/reports/report_list.html
@@ -34,6 +34,7 @@
     <h2>System administration</h2>
     <li><a href="{% url couchlog_home %}">View recent error messages</a></li>
     <li><a href="{% url duplicate_cases %}">View cases found with duplicates</a></li>
+    <li><a href="{% url system_health_report %}">Systems health dashboard</a></li>    
 </div>
 {% endif %}
 {% endblock %} 
